--- a/app/src/main/res/layout/coordinates_degrees_decimal_minutes_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_decimal_minutes_fragment.xml
@@ -6,13 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/centerGuideline"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.50" />
-
     <com.elyeproj.loaderviewlibrary.LoaderTextView
         android:id="@+id/latitudeTextView"
         style="@style/LocationCoordinate"
@@ -21,7 +14,7 @@
         android:gravity="bottom|center_horizontal"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
-        app:layout_constraintBottom_toTopOf="@id/centerGuideline"
+        app:layout_constraintBottom_toTopOf="@id/longitudeTextView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="+100.00000" />
 
@@ -36,15 +29,15 @@
         app:autoSizeTextType="uniform"
         app:custom_color="@color/loaderViewShimmer"
         app:layout_constraintBottom_toTopOf="@id/formatLabelTextView"
-        app:layout_constraintTop_toBottomOf="@id/centerGuideline"
+        app:layout_constraintTop_toBottomOf="@id/latitudeTextView"
         tools:text="+100.00000" />
 
     <TextView
         android:id="@+id/formatLabelTextView"
-        style="@style/TextAppearance.Positional.Body2"
+        style="@style/TextAppearance.Positional.Subtitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/location_coordinate_format_label_degrees_decimal"
+        android:text="@string/location_coordinate_format_label_degrees_decimal_minutes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
