--- a/app/src/main/res/layout/coordinates_mgrs_fragment.xml
+++ b/app/src/main/res/layout/coordinates_mgrs_fragment.xml
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/formatLabelTextView"
-        style="@style/TextAppearance.Positional.Body2"
+        style="@style/TextAppearance.Positional.Subtitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
