--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/positionNavMenuItem"
+        android:id="@+id/location"
         android:enabled="true"
         android:icon="@drawable/ic_twotone_my_location_24px"
         android:title="@string/bottom_navigation_location"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/compassNavMenuItem"
+        android:id="@+id/compass"
         android:enabled="true"
         android:icon="@drawable/ic_twotone_explore_24px"
         android:title="@string/bottom_navigation_compass"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/settingsNavMenuItem"
+        android:id="@+id/settings"
         android:enabled="true"
         android:icon="@drawable/ic_twotone_settings_24px"
         android:title="@string/bottom_navigation_settings"
