--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/compass_fragment" />
 
     <fragment
+        android:id="@+id/sun"
+        android:name="io.trewartha.positional.ui.sun.SunFragment"
+        android:label="SunFragment"
+        tools:layout="@layout/sun_fragment" />
+
+    <fragment
         android:id="@+id/settings"
         android:name="io.trewartha.positional.ui.settings.SettingsFragment"
         android:label="SettingsFragment" />
