--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,6 +18,14 @@
         <item>@string/settings_theme_mode_day_value</item>
         <item>@string/settings_theme_mode_night_value</item>
     </string-array>
+    <string-array name="settings_time_format_labels">
+        <item>@string/settings_time_format_12hr_label</item>
+        <item>@string/settings_time_format_24hr_label</item>
+    </string-array>
+    <string-array name="settings_time_format_values">
+        <item>@string/settings_time_format_12hr_value</item>
+        <item>@string/settings_time_format_24hr_value</item>
+    </string-array>
     <string-array name="settings_units_labels">
         <item>@string/settings_units_imperial_label</item>
         <item>@string/settings_units_metric_label</item>
