--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,7 +70,6 @@
         <item name="autoSizeTextType">uniform</item>
         <item name="corners">4</item>
         <item name="custom_color">@color/loaderViewShimmer</item>
-        <item name="fontFamily">@font/ubuntu_mono</item>
         <item name="height_weight">0.8</item>
     </style>
 
@@ -101,9 +100,9 @@
     </style>
 
     <style name="LocationStat" parent="TextAppearance.Positional.Headline6">
+        <item name="android:textIsSelectable">true</item>
         <item name="corners">4</item>
         <item name="custom_color">@color/loaderViewShimmer</item>
-        <item name="fontFamily">@font/ubuntu_mono</item>
         <item name="height_weight">0.8</item>
     </style>
 
@@ -128,6 +127,31 @@
         <item name="corners">4</item>
         <item name="custom_color">@color/loaderViewShimmer</item>
         <item name="height_weight">0.8</item>
+    </style>
+
+    <!-- Sun -->
+
+    <style name="SunStatLabel" parent="@style/TextAppearance.Positional.Headline6">
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="SunDate" parent="TextAppearance.Positional.Caption">
+        <item name="corners">4</item>
+        <item name="custom_color">@color/loaderViewShimmer</item>
+        <item name="android:gravity">end</item>
+        <item name="height_weight">0.8</item>
+        <item name="android:minWidth">72dp</item>
+    </style>
+
+    <style name="SunStat" parent="TextAppearance.Positional.Headline6">
+        <item name="android:textIsSelectable">true</item>
+        <item name="android:gravity">end</item>
+        <item name="corners">4</item>
+        <item name="custom_color">@color/loaderViewShimmer</item>
+        <item name="fontFamily">@font/ubuntu_mono</item>
+        <item name="height_weight">0.8</item>
+        <item name="android:minWidth">96dp</item>
     </style>
 
     <!-- Text Appearance -->
