--- a/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
@@ -7,29 +7,17 @@
     android:layout_height="match_parent">
 
     <com.elyeproj.loaderviewlibrary.LoaderTextView
-        android:id="@+id/latitudeTextView"
-        style="@style/LocationCoordinate"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="bottom|center_horizontal"
-        android:maxLines="1"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintBottom_toTopOf="@id/longitudeTextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="-100° 60' 60&quot;" />
-
-    <com.elyeproj.loaderviewlibrary.LoaderTextView
-        android:id="@+id/longitudeTextView"
-        style="@style/LocationCoordinate"
+        android:id="@+id/coordinatesTextView"
+        style="@style/LocationCoordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="12dp"
-        android:gravity="top|center_horizontal"
-        android:maxLines="1"
+        android:gravity="center"
+        android:maxLines="2"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@id/formatLabelTextView"
-        app:layout_constraintTop_toBottomOf="@id/latitudeTextView"
-        tools:text="-100° 60' 60&quot;" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="-100° 60' 60&quot;\n-100° 60' 60&quot;" />
 
     <TextView
         android:id="@+id/formatLabelTextView"
