--- a/app/src/main/res/drawable/ic_compass_pin.xml
+++ b/app/src/main/res/drawable/ic_compass_pin.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="574.5"
-    android:viewportWidth="572.6" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#424242" android:pathData="M286.3,307.7c-11.8,0 -21.4,-9.6 -21.4,-21.4c0,-11.8 9.6,-21.4 21.4,-21.4c11.8,0 21.4,9.6 21.4,21.4C307.7,298.1 298.1,307.7 286.3,307.7z"/>
+<vector android:height="24dp"
+    android:viewportHeight="574.5"
+    android:viewportWidth="572.6"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#424242"
+        android:pathData="M286.3,307.7c-11.8,0 -21.4,-9.6 -21.4,-21.4c0,-11.8 9.6,-21.4 21.4,-21.4c11.8,0 21.4,9.6 21.4,21.4C307.7,298.1 298.1,307.7 286.3,307.7z" />
 </vector>
