--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,10 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="42.105263"
-        android:viewportHeight="42.105263">
-    <group android:translateX="9.052631"
-            android:translateY="9.052631">
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="42.105263"
+    android:viewportHeight="42.105263">
+    <group
+        android:translateX="9.052631"
+        android:translateY="9.052631">
         <path
             android:fillAlpha="0.3"
             android:fillColor="#FF000000"
